--- a/Frontend/TuPsi/src/app/app.component.html
+++ b/Frontend/TuPsi/src/app/app.component.html
@@ -1,7 +1,7 @@
+<app-nav></app-nav>
 <app-header></app-header>
 <app-section1></app-section1>
 <app-section2></app-section2>
-
-
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
