--- a/Frontend/TuPsi/src/app/app.component.html
+++ b/Frontend/TuPsi/src/app/app.component.html
@@ -3,5 +3,7 @@
 <app-section1></app-section1>
 <app-section2></app-section2>
 <app-footer></app-footer>
+<app-filter></app-filter>
+<app-card></app-card>
 
 <router-outlet></router-outlet>
