--- a/Frontend/TuPsi/src/app/shared/nav/nav.component.html
+++ b/Frontend/TuPsi/src/app/shared/nav/nav.component.html
@@ -33,6 +33,11 @@
         <li class="nav-item">
           <a class="nav-link active" routerLink="/login">Iniciar Sesión</a>
         </li>
+  
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/dashboard">Dashboard prueba</a>
+        </li>
+        
       </ul>
     </div>
   </div>
