--- a/Frontend/TuPsi/src/app/pages/dashboard/add-professional/add-profesional.component.html
+++ b/Frontend/TuPsi/src/app/pages/dashboard/add-professional/add-profesional.component.html
@@ -11,9 +11,15 @@
                       </div>
                   </div>
                   <div class="form-group row mt-1">
-                      <label for="tel" class="col-sm-2 col-form-label">Telefono</label>
+                    <label for="name" class="col-sm-2 col-form-label">Apellido</label>
+                    <div class="col-sm-8 bg-light">
+                        <input type="text" formControlName="apellido" placeholder="apellido" class="form-control-plaintext" id="name" value="">
+                    </div>
+                </div>
+                  <div class="form-group row mt-1">
+                      <label for="tel" class="col-sm-2 col-form-label">Tipo de Terapia</label>
                       <div class="col-sm-8 bg-light">
-                          <input type="text" formControlName="telefono" placeholder="Telefono" class="form-control-plaintext" id="tel" value="">
+                          <input type="text" formControlName="Terapia" placeholder="Terapia" class="form-control-plaintext" id="tel" value="">
                       </div>
                   </div>
                   <div class="form-group row mt-1">
@@ -23,9 +29,21 @@
                       </div>
                   </div>
                   <div class="form-group row mt-1">
-                      <label for="reg_id" class="col-sm-2 col-form-label"># Matricula</label>
+                      <label for="reg_id" class="col-sm-2 col-form-label">Provincia</label>
                       <div class="col-sm-8 bg-light">
-                          <input type="text" formControlName="matricula" placeholder="Numero de Matricula" class="form-control-plaintext" id="reg_id" value="">
+                          <input type="text" formControlName="Provincia" placeholder="Provincia" class="form-control-plaintext" id="reg_id" value="">
+                      </div>
+                  </div>
+                  <div class="form-group row mt-1">
+                      <label for="reg_id" class="col-sm-2 col-form-label">Localidad</label>
+                      <div class="col-sm-8 bg-light">
+                          <input type="text" formControlName="Localidad" placeholder="Localidad" class="form-control-plaintext" id="reg_id" value="">
+                      </div>
+                  </div>
+                  <div class="form-group row mt-1">
+                      <label for="reg_id" class="col-sm-2 col-form-label"># Matrícula</label>
+                      <div class="col-sm-8 bg-light">
+                          <input type="text" formControlName="Matrícula" placeholder="Matrícula" class="form-control-plaintext" id="reg_id" value="">
                       </div>
                   </div>
                   <div class="form-group row mt-4 px-5 justify-content-center">
