moficiacion de vista profesional

--- a/Frontend/TuPsi/src/app/pages/dashboard/see-professional/see-professional.component.html
+++ b/Frontend/TuPsi/src/app/pages/dashboard/see-professional/see-professional.component.html
@@ -10,7 +10,7 @@
                     <th scope="col">tipo-de-terapia</th>
                     <th scope="col">correo-electronico</th>
                     <th scope="col">pronvincia</th>
-                    <th scope="col">localidad/th>
+                    <th scope="col">localidad</th>
                     <th scope="col">matricula</th>
                   </tr>
                 </thead>
