--- a/Frontend/TuPsi/src/app/pages/admin-pacientes/admin-pacientes.component.html
+++ b/Frontend/TuPsi/src/app/pages/admin-pacientes/admin-pacientes.component.html
@@ -7,6 +7,7 @@
         <thead>
           <tr>
             <th scope="col">Id</th>
+            <th scope="col">Dni</th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
             <th scope="col">Sexo</th>
@@ -28,6 +29,14 @@
                 type="text"
                 class="form-control"
                 [value]="item.id || ''"
+                [readonly]="!item.editando"
+              />
+            </td>
+            <td>
+              <input
+                type="text"
+                class="form-control"
+                [value]="item.dni"
                 [readonly]="!item.editando"
               />
             </td>
