--- a/Frontend/TuPsi/src/app/shared/nav/nav.component.html
+++ b/Frontend/TuPsi/src/app/shared/nav/nav.component.html
@@ -47,6 +47,11 @@
       
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link active" routerLink="/miPerfil">
+            <i class="fas fa-sign-in-alt"></i> Mi Perfil
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" routerLink="/login">
             <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
           </a>
