--- a/Frontend/TuPsi/src/app/shared/nav/nav.component.html
+++ b/Frontend/TuPsi/src/app/shared/nav/nav.component.html
@@ -37,20 +37,21 @@
             Administrar
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/AdminPacientes">Administrar Pacientes</a></li>
-            <li><a class="dropdown-item" routerLink="/AdminProfesionales">Administrar Profesionales</a></li>
-            <li><a class="dropdown-item"routerLink="/AdminPlanes">Administrar Planes</a></li>
+            <li><a class="dropdown-item" routerLink="/loginAdmin">Administrar Pacientes</a></li>
+            <li><a class="dropdown-item" routerLink="/loginAdmin">Administrar Profesionales</a></li>
+            <li><a class="dropdown-item"routerLink="/loginAdmin">Administrar Planes</a></li>
+
+            <!-- 
+              <li><a class="dropdown-item" routerLink="/AdminPacientes">Administrar Pacientes</a></li>
+              <li><a class="dropdown-item" routerLink="/AdminProfesionales">Administrar Profesionales</a></li>
+              <li><a class="dropdown-item"routerLink="/AdminPlanes">Administrar Planes</a></li>
+             -->
     
           </ul>
         </div>
       </ul>
       
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="/miPerfil">
-            <i class="fas fa-sign-in-alt"></i> Mi Perfil
-          </a>
-        </li>
         <li class="nav-item">
           <a class="nav-link active" routerLink="/login">
             <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
