--- a/Frontend/TuPsi/src/app/pages/search/search.component.html
+++ b/Frontend/TuPsi/src/app/pages/search/search.component.html
@@ -32,8 +32,8 @@
     <div class="card" [ngStyle]="getCardStyle(i)">
       <div class="card-body">
         <h5 class="card-title">{{ profesional.nombre }}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">{{ profesional.numero_matricula }}</h6>
-        <p class="card-text">{{ profesional.tipo_de_terapia }}</p>
+        <h6 class="card-subtitle mb-2 text-muted">{{ profesional.matricula }}</h6>
+        <p class="card-text">{{ profesional.terapiaprofesional }}</p>
         <p class="card-text">Ubicación: {{ profesional.localidad }}</p>
         <p class="card-text">Teléfono: {{ profesional.telefono }}</p>
         <a href="#" class="card-link">Más información</a>
