--- a/Frontend/TuPsi/src/app/shared/nav/nav.component.html
+++ b/Frontend/TuPsi/src/app/shared/nav/nav.component.html
@@ -23,9 +23,9 @@
         <li class="nav-item">
           <a class="nav-link active" routerLink="/search"><i class="fas fa-search"></i>Buscar</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" routerLink="/signProfesional"><i class="fas fa-user"></i>Registro Profesional</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link active" routerLink="/signPaciente"><i class="fas fa-user"></i>Registro Pacientes</a>
         </li>
@@ -37,30 +37,29 @@
             Administrar
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/loginAdmin">Administrar Pacientes</a></li>
-            <li><a class="dropdown-item" routerLink="/loginAdmin">Administrar Profesionales</a></li>
-            <li><a class="dropdown-item"routerLink="/loginAdmin">Administrar Planes</a></li>
-
-            <!-- 
-              <li><a class="dropdown-item" routerLink="/AdminPacientes">Administrar Pacientes</a></li>
-              <li><a class="dropdown-item" routerLink="/AdminProfesionales">Administrar Profesionales</a></li>
-              <li><a class="dropdown-item"routerLink="/AdminPlanes">Administrar Planes</a></li>
-             -->
+            <li><a class="dropdown-item" routerLink="/AdminPacientes">Administrar Pacientes</a></li>
+            <li><a class="dropdown-item" routerLink="/AdminProfesionales">Administrar Profesionales</a></li>
+            <li><a class="dropdown-item"routerLink="/AdminPlanes">Administrar Planes</a></li>
     
           </ul>
         </div>
       </ul>
       
       <ul class="navbar-nav">
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a class="nav-link active" style="color: #fff700;"  routerLink="/miPerfil">
+            <i class="fas fa-user" ></i> {{ username }}
+          </a>
+        </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/login">
+          <a class="nav-link active" style="cursor: pointer;" *ngIf="isAuthenticated" (click)="logout()">
+            <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
+          </a>
+          <a class="nav-link active" *ngIf="!isAuthenticated" routerLink="/login">
             <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
           </a>
         </li>
-        
       </ul>
-      <!-- Example single danger button -->
-
     </div>
   </div>
 </nav>
