--- a/Frontend/TuPsi/src/app/pages/admin-pacientes/admin-pacientes.component.html
+++ b/Frontend/TuPsi/src/app/pages/admin-pacientes/admin-pacientes.component.html
@@ -35,7 +35,7 @@
               <input
                 type="text"
                 class="form-control"
-                [value]="item.nombre"
+                [value]="item.name"
                 [readonly]="!item.editando"
               />
             </td>
@@ -43,7 +43,7 @@
               <input
                 type="text"
                 class="form-control"
-                [value]="item.apellido"
+                [value]="item.lastname"
                 [readonly]="!item.editando"
               />
             </td>
